# ITK-ArrayFire-Bridge-Tutorial

./: CMakeLists.txt  README.md
Exercises/: CMakeLists.txt
Exercises/ArrayFireIntroduction/: CMakeLists.txt  MedianFilterAF.cxx
Exercises/ArrayFireOpenCVBridge/: CMakeLists.txt  VideoFilteringAFOpenCVBridge.cxx
Exercises/ITKArrayFire/: CMakeLists.txt  MedianFilterAFITK.cxx
Exercises/ITKIntroduction/: CMakeLists.txt  MedianFilterITK.cxx
Exercises/ITKVideoPipeline/: CMakeLists.txt  MedianFilterOnVideoITK.cxx
